--- a/css/style.css
+++ b/css/style.css
@@ -25,10 +25,12 @@ h1{
     width: 85%;
     text-align: center;
 }
+h2{
+    text-align: center;
+}
 h2.bandeauTitreH2{
     color: #fff;
     background: #343A40;
-    text-align: center;
 }
 h3.bandeauTitreH3Artistes, h3.bandeauTitreH3Titres{
     font-size: calc(0.7rem + .6vw);
@@ -45,7 +47,7 @@ h3.bandeauTitreH3Titres{
 
 
 #logo{
-    width: 15%;
+    width: 250px;
 }    
 
 #inputs{
@@ -63,6 +65,7 @@ h3.bandeauTitreH3Titres{
 
 .nav-link, footer ul li a{
     color: #fff;
+    font-size: 0.99rem;
 }
 .nav-link:hover, footer ul li a:hover{
     color: #FDBE13;
@@ -157,7 +160,7 @@ footer ul li a{
         width: 135px;
     }
     h1{
-        font-size: 3rem;
+        font-size: 2.5rem;
         text-align: center;
     }
     .blocArtiste, .blocTitre {
