--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,6 @@ h3.bandeauTitreH3Titres{
 
 .nav-link, footer ul li a{
     color: #fff;
-    font-size: 0.99rem;
 }
 .nav-link:hover, footer ul li a:hover{
     color: #FDBE13;
@@ -162,6 +161,9 @@ footer ul li a{
     h1{
         font-size: 2.5rem;
         text-align: center;
+    }
+    .nav-link, footer ul li a{
+        font-size: 0.9rem;
     }
     .blocArtiste, .blocTitre {
         width: calc(100% / 2);
