--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@ Thierry Goguet
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,900;1,300&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap'); /* Roboto + Poppins */
 
 body{
-    color: #343A40;
-    background: linear-gradient(180deg, #FFFFFF 0%, #EFEFEF 100%);
+    color: #fff;
+    background: linear-gradient(180deg, #000000 20%, #30475F 50%, #000000 100%);
 }
 
 nav, header{
@@ -17,7 +17,7 @@ nav, header{
 }
 header{
     padding: 10px;
-    background: url(../img/BG_vinyl_1920_blue.jpg);
+    background: radial-gradient(100% 100% at 50% 0%, rgba(0, 0, 0, 0) 0%, #000000 100%), url(../img/BG_vinyl_1920_blue.jpg);
     background-size: cover;
     height: 200px;
 }
@@ -44,24 +44,17 @@ h2{
 }
 h2.bandeauTitreH2{
     color: #fff;
-    background: #343A40;
+    background: #FF8A00;
+    border-radius: 5px;
 }
-h3.bandeauTitreH3Artistes, h3.bandeauTitreH3Titres{
-    font-size: calc(0.7rem + .6vw);
-    color: #fff;
-    text-align: center;
-    margin-bottom: 0;
+.badge{
+    display: block;
+    margin-top: 15px;
 }
-h3.bandeauTitreH3Artistes{
-    background: #83555E;
-}
-h3.bandeauTitreH3Titres{
-    background: #D16344;
-}
-
 
 #logo{
     width: 250px;
+    margin: 0 20px;
 }    
 
 #inputs{
@@ -136,11 +129,28 @@ h3.bandeauTitreH3Titres{
 #rechrec, #populaire {
     margin-bottom: 20px;
 }
+h3.bandeauTitreH3Artistes, h3.bandeauTitreH3Titres{
+    font-size: calc(0.7rem + .6vw);
+    color: #fff;
+    text-align: center;
+    margin-bottom: 0;
+}
+h3.bandeauTitreH3Artistes{
+    background: #14D8CC;
+    border-radius: 5px 5px 0px 0px;
+}
+h3.bandeauTitreH3Titres{
+    background: #B76AD1;
+    border-radius: 5px 5px 0px 0px;
+}
 .contenuArtistes{
-    background: rgba(131, 85, 94, 0.1);
+    background: rgba(20, 216, 204, 0.1);
+    border-radius: 0px 0px 5px 5px;
+    margin-bottom: 10px;
 }
 .contenuTitres{
-    background: rgba(209, 99, 68, 0.1);
+    background: rgba(183, 106, 209, 0.1);
+    border-radius: 0px 0px 5px 5px;
 }
 .blocArtiste, .blocTitre {
     width: calc(100% / 4);
@@ -150,7 +160,7 @@ h3.bandeauTitreH3Titres{
 
 /* FOOTER */
 footer{
-    background: #343A40;
+    background: #000;
     color: #fff;
 }
 footer ul{
@@ -173,10 +183,10 @@ footer ul li a{
         height: 150px;
     }
     #logo{
-        width: 135px;
+        width: 120px;
     }
     h1{
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
     .nav-link, footer ul li a{
         font-size: 0.9rem;
