--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,11 @@ header{
     height: 200px;
 }
 
+nav{
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    margin-bottom: 35px !important;
+}
+
 h1{
     font-family: 'Poppins', sans-serif;
     font-weight: 900;
@@ -124,6 +129,30 @@ h2.bandeauTitreH2{
     background-color: #11A199;
     border-color: #11A199;
 }
+/* bouton Wikipedia */
+.btn-wkpd, .btn-wkpd:hover{
+    color: #000;
+}
+.btn-wkpd {
+    background-color: #C7C8CA;
+    border-color: #C7C8CA;
+}
+.btn-wkpd:hover {
+    background-color: #A3A3A3;
+    border-color: #A3A3A3;
+}
+/* bouton fnac */
+.btn-fnac, .btn-fnac:hover{
+    color: #000;
+}
+.btn-fnac {
+    background-color: #FDBE13;
+    border-color: #FDBE13;
+}
+.btn-fnac:hover {
+    background-color: #E0AA16;
+    border-color: #E0AA16;
+}
 
 /* ------------------------- BLOCS GROUPE/ARTISTE ou TITRE ------------------------- */
 #rechrec, #populaire {
@@ -156,6 +185,44 @@ h3.bandeauTitreH3Titres{
     width: calc(100% / 4);
     text-align: center;
     padding: 10px;
+}
+.blocArtiste a, .blocTitre a{
+    text-decoration: none;
+}
+
+/* BLOC BIO */
+.titreSpanBio{
+    text-transform: uppercase;
+    color: #14D8CC;
+    font-weight: 900;
+}
+
+.blocTexteBio{
+    color: #EFEFEF;
+}
+.blocTexteBio p{
+    text-align: justify;
+}
+
+/* BLOC PROCHAIN CONCERT */
+.blocProchainConcert{
+    background: #EB743B;
+}
+.blocDateConcert{
+    background: #fff;
+    color: #000;
+    width: 98%;
+    min-width: 250px;
+    margin: 5px 0;
+}
+.blocDateConcert p{
+    margin: 0;
+}
+.blocDateConcert .date p{
+    text-align: right;
+}
+.date{
+    border-right: 1px solid #000;
 }
 
 /* FOOTER */
