--- a/css/style.css
+++ b/css/style.css
@@ -256,6 +256,11 @@ h3.bandeauTitreH3Titres{
     margin: 5px;
     width: calc(97%/3);
 }
+.vid iframe{
+    width: 100%;
+    height: 100%;
+    border: none;
+}
 
 /* FOOTER */
 footer{
