--- a/css/style.css
+++ b/css/style.css
@@ -245,6 +245,11 @@ audio{
 .blocTexteBio p{
     text-align: justify;
 }
+.blocArtisteBio iframe{
+    width: 100%;
+    height: 92px;
+    border: none;
+}
 
 /* BLOC PROCHAIN CONCERT */
 .blocProchainConcert{
@@ -282,7 +287,6 @@ audio{
     font-size: 1rem;
     right: 1rem;
     color: #FFE600;
-    font-size: 1rem;
     text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.5);
 }
 .favArtistes{
